<resources>
    <string name="app_name">Apptentive</string>
    <string name="hint_event_name">Event name</string>
    <string name="engage">Engage</string>
    <string name="can_show_interaction">\?</string>
    <string name="love_dialog">Love Dialog</string>
    <string name="survey">Survey</string>
    <string name="note">Note</string>
    <string name="message_center">Message Center</string>
    <string name="dev_functions">Dev Functions</string>
    <string name="night">Night</string>
    <string name="select_local_manifest">Select local manifest</string>

    <!-- Dev Functions Screen -->
    <string name="custom_device_data">Custom Device Data</string>
    <string name="value">Value…</string>
    <string name="add">Add</string>
    <string name="custom_person_data">Custom Person Data</string>
    <string name="remove">Remove</string>
    <string name="person_email">Person Email</string>
    <string name="name">Name…</string>
    <string name="set">Set</string>
    <string name="key">Key…</string>
    <string name="email">Email…</string>
    <string name="person_name">Person Name</string>
    <string name="select_function_type">Select function type</string>
    <string name="select_user">Select user</string>
    <string name="select_jwt">Select jwt</string>
    <string name="send">Send</string>
    <string name="hidden_text_file_contents">Hidden Text File Contents</string>
    <string name="select_hidden_file">Select Hidden File</string>
    <string name="file_name">File Name</string>
    <string name="files">Files</string>
    <string name="photo_name">Photo Name</string>
    <string name="take_nphoto">Take\nPhoto</string>
    <string name="hidden_text">Hidden Text</string>

    <!-- Debug Screen Start -->
    <string name="sdk_information">SDK Information:</string>
    <string name="app_information">App Information:</string>
    <string name="phone_information">Phone Information:</string>
    <string name="sdk_version">SDK Version: %s</string>
    <string name="build_date_time">Built: %s</string>

    <!-- Styles -->
    <string name="apptentive_theme">Apptentive Theme</string>
    <string name="style_information">Style Information:</string>
    <string name="theme_name">Theme Name</string>
    <string name="colorPrimary">colorPrimary</string>
    <string name="colorOnPrimary">colorOnPrimary</string>
    <string name="colorPrimaryVariant">colorPrimaryVariant</string>
    <string name="colorSecondary">colorSecondary</string>
    <string name="colorSecondaryVariant">colorSecondaryVariant</string>
    <string name="colorOnSecondary">colorOnSecondary</string>
    <string name="android_colorBackground">android:colorBackground</string>
    <string name="colorOnBackground">colorOnBackground</string>
    <string name="android_textColorSecondary">android:textColorSecondary</string>
    <string name="colorError">colorError</string>

    <string name="cd_app_icon">App Icon</string>
    <string name="cd_spacing_line">Spacing Line</string>
    <string name="rating_dialog">Rating Dialog</string>
    <string name="internal_test">Internal Test</string>
    <string name="info_button">Info button</string>
    <string name="custom_data_button">Custom data button</string>
    <string name="enter_event_to_engage">Enter event to engage</string>
    <string name="no_event_entered">No event entered</string>
    <string name="interactions">Interactions</string>
    <string name="rating_dialog_message">Shows the Apptentive Rating Dialog.\n\'Rate\' sends you to the customAppStoreURL set in ApptentiveConfiguration.</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="clear_app_data_info">Clears all of the app\'s data and closes the app.\nWill require manual opening of the app again.</string>
    <string name="sanitize_logs">Sanitize Logs</string>
    <string name="encrypt_conversation">Encryption</string>
    <string name="sanitize_logs_info">Determines if sensitive info should be logged.\nWill require manual opening of the app again.</string>
    <string name="encryption_switch_info">Should conversation be encrypted?.\nWill require manual opening of the app again.</string>
    <string name="back_button">Back button</string>
    <string name="select_data_type">Select data type</string>
    <string name="custom_data">Custom Data</string>
    <string name="string">String</string>
    <string name="number">Number</string>
    <string name="boolean_string">Boolean</string>
    <string name="other_person_data">Other Person Data</string>
    <string name="deep_link_successful">Deep Link Successful</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="login2">Logout with out login</string>
    <string name="login3">LOGIN_3</string>

    <plurals name="unread_messages">
        <item quantity="one">%d unread message</item>
        <item quantity="other">%d unread messages</item>
    </plurals>

    <!-- Debug Screen End -->
</resources>
